# iResourceScheduler

./: README.md  api.py  prefect_flow.py  pyproject.toml  智能资源调度.md  调度代码大纲流程图.md  调度代码流程图.md
src/iresourcescheduler/: __init__.py
src/iresourcescheduler/cli/: __init__.py  main.py
src/iresourcescheduler/compatibility/: __init__.py  rules.py
src/iresourcescheduler/domain/: __init__.py  models.py
src/iresourcescheduler/estimator/: __init__.py  memory_estimator.py  typing.py
src/iresourcescheduler/inventory/: __init__.py  clusters.yaml  specs_loader.py  state_cardinfo.py  state_mock.py
src/iresourcescheduler/logging/: __init__.py  decision_logger.py  failure_handler.py
src/iresourcescheduler/planner/: __init__.py  planner.py
src/iresourcescheduler/scheduler/: __init__.py  scheduler.py
tests/: conftest.py  test_cli_parse_params.py  test_estimator.py  test_planner.py  test_scheduler.py  test_state_cardinfo.py
