[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iresourcescheduler"
version = "0.1.0"
description = "Intelligent GPU resource scheduler for heterogeneous clusters"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
prefect = ["prefect>=2.14.0"]

